Fix CSS targeting voted options & use mix-blend-mode to make option text more readable

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,3 +1,8 @@
+:root {
+  --poll-option-color: var(--muted-color);
+  --poll-option-active-color: var(--secondary-color);
+}
+
 .ComposerBody-poll {
   margin-right: 15px;
 
@@ -121,7 +126,6 @@
     display: flex;
     align-items: flex-start;
     column-gap: 15px;
-    z-index: 999;
     background-color: var(--body-bg);
     .box-shadow(inset 0px 2px 0px 0px fade(@text-color, 20%));
 
@@ -164,29 +168,23 @@
 }
 
 .PollOption {
-  & &-active {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    width: var(--width, 0);
-    background-color: @muted-color;
+  &, .PollBar {
+    border-radius: 4px;
+  }
 
-    // Don't animate if the post is hidden
-    &:not(.Post--hidden &) {
-      animation: slideIn 1s ease-in-out;
-      transition: width 0.75s ease-in-out;
-    }
-
-    .checkmark {
-      background-color: #fabc67;
-    }
+  &:hover {
+    background: #f3f3f39e;
   }
 
   /* Percent */
   .PollPercent {
     padding-right: 5px;
+    font-size: 11px;
+    font-weight: 600;
+
+    &--option {
+      color: @muted-color;
+    }
   }
 
   .PollLabel {
@@ -200,57 +198,90 @@
     text-transform: none;
   }
 
-  .PollAnswerImage {
-    display: block; // Put image on its own line below label text
-    max-width: 100%;
-    margin-top: 10px;
+  &:not(.Post--hidden &) {
+    .PollBar::after {
+      animation: slideInPollBackground 1s ease-in-out;
+      transition: background-size 0.75s ease-in-out;
+    }
   }
 
   .PollBar {
-    background: transparent;
     padding: 10px;
     position: relative;
-    border-radius: 4px;
-    border: 2px solid @muted-color;
+    border: 2px solid var(--poll-option-color);
     overflow: hidden;
+    isolation: isolate;
 
-    display: flex;
-    column-gap: 10px;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-auto-flow: row;
+    gap: 10px;
     align-items: flex-start;
 
-    &:hover {
-      background: #f3f3f39e;
-    }
+    .PollAnswer {
+      &-checkbox, &-text {
+        mix-blend-mode: darken;
 
-    label {
-      position: relative;
-      z-index: 2;
-
-      span {
-        font-size: 11px;
-        line-height: 19px;
-        font-weight: 600;
+        & when (@config-dark-mode =true) {
+          mix-blend-mode: difference;
+        }
       }
     }
+
+    .PollAnswer-checkbox {
+      grid-column: 1;
+      grid-row: 1;
+
+      + .PollAnswer-text {
+        grid-column: 2;
+      }
+    }
+
+     .PollAnswer-text {
+         grid-column: ~"1 / span 2";
+      grid-row: 1;
+
+       display: flex;
+       column-gap: 5px;
+       align-items: first baseline;
+
+       &-answer {
+         flex-grow: 1;
+       }
+     }
+
+    .PollAnswer-image {
+      grid-column: ~"1 / span 2";
+      grid-row: 2;
+      max-width: 100%;
+    }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      z-index: -1;
+      background-image: linear-gradient(to right, var(--poll-option-color) 0% 100%);
+      background-size: var(--poll-option-width) 100%;
+      background-repeat: no-repeat;
+      content: '';
+    }
+
     .PollAnswer {
       flex-grow: 1;
     }
 
-    &[data-selected=true] {
-      border-color: @secondary-color;
-
-      .PollOption-active {
-        background-color: @secondary-color;
-      }
-
-      label .PollAnswer {
-        color: contrast(@secondary-color);
-      }
+    &[data-selected] {
+      --poll-option-color: var(--poll-option-active-color);
     }
   }
 
-  label.checkbox {
+  .PollAnswer-checkbox {
     margin-bottom: 0;
+    position: relative;
+    z-index: 2;
 
     input[type="checkbox"] {
       position: absolute;
@@ -283,10 +314,8 @@
         top: 3px;
         width: 5px;
         height: 10px;
-        border: solid black;
+        border: solid var(--text-color);
         border-width: 0 3px 3px 0;
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
         transform: rotate(45deg);
       }
 
@@ -350,15 +379,11 @@
   }
 }
 
-@keyframes slideIn {
+@keyframes slideInPollBackground {
   from {
-    width: 0
+    background-size: 0 100%;
   }
   to {
-    width: var(--width);
+    background-size: var(--poll-option-width) 100%;
   }
-}
-
-.PollPercent--option {
-  color: #868686;
 }
